--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <i class = 'fa fa fa-external-link ml-2'></i>
             </a>  
             <a target = 'blank'
-              href = 'https:+github+'
+              href = 'https://github.com/cgcarlosg/Printers-and-Inks-Online-Store/tree/Feature'
               class='github position-absolute p-2 d-flex justify-content-evenly
               align-items-baseline text-decoration-none'>
               See source
@@ -148,7 +148,7 @@
       <div class = 'grid-full order-2'>
         <div class = 'ruby-game'>
           <iframe 
-          src="https://repl.it/@marcelomaidden/EverlastingRequiredFunnel?lite=true&outputonly=true" 
+          src="" 
           >
         </iframe>
         </div>
@@ -168,7 +168,7 @@
             </div> 
           </div>
           <a target = 'blank'
-              href = 'https://repl.it/@marcelomaidden/EverlastingRequiredFunnel#README.md'
+              href = ''
               class='live position-absolute p-2 d-flex justify-content-evenly
               align-items-baseline text-decoration-none'>
               See live
@@ -176,7 +176,7 @@
           </a>  
 
           <a target = 'blank'
-            href = 'https://github.com/++'
+            href = 'https://github.com/Huemac-Alfredo/Tic-tac-toe-project/tree/game_logic'
             class='github position-absolute p-2 d-flex justify-content-evenly
             align-items-baseline text-decoration-none'>
             See source
@@ -190,31 +190,30 @@
       <div class = 'grid-two-rows'>
         <div class = 'shop-project position-relative'>
           <span class = 'author mx-2 p-2 position-absolute'>
-            Photo by *****
+           
           </span>
         </div>
         <div class = 'shop-project-mini position-relative'>
           <span class = 'author mx-2 p-2 position-absolute'>
-            Photo by ****
+          
           </span>
         </div>
       </div>
       <div class = 'grid-full'>
         <div class="shop-main-project position-relative">
           <h1 class="poppins">
-            Online shop
+            Telegram-Bot
           </h1>
           <div class = 'd-flex flex-row poppins'>
             <div class = 'languages mx-2 p-2 d-flex col-4 justify-content-center'>
-              HTML/CSS
+              RUBY
             </div>
             <div class = 'project-description mx-2 p-2 col justify-content-center'>
-              Implementation of a responsive Online Shop website that fits on different 
-              screen sizes depending on the device used. 
+              This is a Telegram bot that can be added to a store as a tool that helps to make printer sales. Through this "Bot" you will be offered the best variety of products at the time of communicating through Telegram with the account of the company website.
             </div>             
           </div>          
           <a target = 'blank'
-              href = 'https://githubwebpage/'
+              href = 'https://github.com/cgcarlosg/Telegram-Bot/tree/Feature/'
               class='live position-absolute p-2 d-flex justify-content-evenly
               align-items-baseline text-decoration-none'>
               See live
@@ -273,7 +272,6 @@
             <li>Collaborative programming</li>
             <li>Terminal</li>
             <li>Linux</li>
-            <li>Docker</li>
           </ul>
         </div>
         <div class = 'knowledge d-flex flex-column p-3'>
@@ -284,7 +282,6 @@
           <h1>Soft Skills</h1>
           <ul class = 'd-flex flex-column justify-content-evenly'>
             <li>Team work</li>
-            <li>English fluency</li>
             <li>Leadership</li>
             <li>Problem-solving</li>
             <li>Patience</li>
@@ -297,13 +294,11 @@
         <span class = 'number1 numbers'>03</span>   
         <span class = 'my-works'>some words</span>
         <h1 class = 'playfair-display'>About me</h1>   
-        <p>Full Stack Developer....’ 
-          change this paragraph :experience in the public sector. Self-motivated and fast learner proficient with
-          Linux and Windows Operating Systems. Looking to develop software that can help
-           peoples’ lives to be easier.
+        <p>Full Stack Developer’ <br/> 
+          I am convinced that this world is better if we work together, with generosity, respect, and great professionalism in all aspects of our lives
         </p>  
         <span class = 'get-my-resume mt-5 d-none d-md-flex'>
-          <a target = 'blank' href = 'assets/docs/resume.pdf'>
+          <a target = 'blank' href = 'https://docs.google.com/document/d/1KExT2Oaw2SxIk7wk6bqEJtSKUX5Q8KxLr4rQYexZAC8/edit?usp=sharing'>
             Get my resume
             <i class = 'fa fa-upload'></i>
           </a>
@@ -337,7 +332,7 @@
           </li>
         </ul>
         <span class = 'get-my-resume mt-5 d-flex d-md-none mx-auto'>
-          <a target = 'blank' href = 'assets/docs/resume.pdf'>
+          <a target = 'blank' href = 'https://docs.google.com/document/d/1KExT2Oaw2SxIk7wk6bqEJtSKUX5Q8KxLr4rQYexZAC8/edit?usp=sharing'>
             Get my resume
             <i class = 'fa fa-upload'></i>
           </a>
