added links of repl.it

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class = 'grid-full order-2'>
         <div class = 'ruby-game'>
           <iframe 
-          src="" 
+          src="https://repl.it/@cgcarlosg/Tic-tac-toe-project-1?lite=true" 
           >
         </iframe>
         </div>
@@ -168,7 +168,7 @@
             </div> 
           </div>
           <a target = 'blank'
-              href = ''
+              href = 'https://repl.it/@cgcarlosg/Tic-tac-toe-project-1'
               class='live position-absolute p-2 d-flex justify-content-evenly
               align-items-baseline text-decoration-none'>
               See live
