Add javascript project

--- a/index.html
+++ b/index.html
@@ -230,6 +230,50 @@
         </div>
       </div>
     </section>
+    <section class="projects mt-1 text-white">
+      <div class = 'grid-full'>
+        <div class="todo-main-project position-relative">
+          <h1 class="poppins">
+            To Do List In Javascript
+          </h1>
+          <div class = 'd-flex flex-row poppins'>
+            <div class = 'languages mx-2 p-2 d-flex col-4 justify-content-center'>
+              Javascript
+            </div>
+            <div class = 'project-description mx-2 p-2 col justify-content-center'>
+              Todo list in JavaScript is a practice project, which includes managing the dynamically DOM manipulation.
+            </div>             
+          </div>          
+          <a target = 'blank'
+              href = 'https://rawcdn.githack.com/cgcarlosg/ToDoList/2b17e9c5ae4639f0a5ce04039e98acc563922544/dist/index.html'
+              class='live position-absolute p-2 d-flex justify-content-evenly
+              align-items-baseline text-decoration-none'>
+              See live
+              <i class = 'fa fa fa-external-link ml-2'></i>
+          </a>  
+
+          <a target = 'blank'
+          href = 'https://github.com/cgcarlosg/ToDoList/tree/Feat'
+          class='github position-absolute p-2 d-flex justify-content-evenly
+          align-items-baseline text-decoration-none'>
+          See source
+          <i class = 'fa fa-github'></i>
+        </a>  
+        </div>
+      </div>
+      <div class = 'grid-two-rows'>
+        <div class = 'todo-project position-relative'>
+          <span class = 'author mx-2 p-2 position-absolute'>
+           
+          </span>
+        </div>
+        <div class = 'todo-project-mini position-relative'>
+          <span class = 'author mx-2 p-2 position-absolute'>
+          
+          </span>
+        </div>
+      </div>
+    </section>
     <section class="about-me p-1 p-md-5 poppins text-white">
       <div class = 'my-knowledge' id = 'services'>
         <div class = 'knowledge d-flex flex-column p-3'>
