--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
       <h1 class = 'playfair-display position-absolute' id = "portfolio">Portfolio</h1>
     </section>
   </header>  
+  
   <main>
+    
     <section class="projects text-white container-fluid">
       <div class = 'grid-two-rows'>
         <div class = 'first-project'></div>
@@ -144,6 +146,7 @@
         </div>
       </div>
     </section>
+    <div class="separate"></div>
     <section class="projects mt-3 text-white">
       <div class = 'grid-full order-2'>
         <div class = 'ruby-game'>
@@ -186,6 +189,7 @@
         </div>
       </div>
     </section>
+    <div class="separate"></div>
     <section class="projects mt-1 text-white">
       <div class = 'grid-two-rows'>
         <div class = 'shop-project position-relative'>
@@ -230,6 +234,7 @@
         </div>
       </div>
     </section>
+    <div class="separate"></div>
     <section class="projects mt-1 text-white">
       <div class = 'grid-full'>
         <div class="todo-main-project position-relative">
@@ -274,6 +279,7 @@
         </div>
       </div>
     </section>
+    <div class="separate"></div>
     <section class="about-me p-1 p-md-5 poppins text-white">
       <div class = 'my-knowledge' id = 'services'>
         <div class = 'knowledge d-flex flex-column p-3'>
